--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -18,6 +18,7 @@
 
 .carousel-content {
   display: flex;
+  gap: 20px;
   transition: all 250ms linear;
   -ms-overflow-style: none; /* hide scrollbar in IE and Edge */
   scrollbar-width: none; /* hide scrollbar in Firefox */
@@ -46,14 +47,20 @@
   border-radius: 24px;
   background-color: white;
   border: 1px solid #ddd;
+  opacity: 0.5;
 }
 
 .left-arrow {
-  left: 24px;
+  left: -15px;
 }
 
 .right-arrow {
   right: 24px;
+}
+
+.left-arrow:hover,
+.right-arrow:hover {
+  opacity: 1;
 }
 
 @media (hover: none) and (pointer: coarse) {
